src/mermaid/ascii/class/snapshots/veol__mermaid__ascii__class__render__tests__render_ascii_charset.snap
---
source: src/mermaid/ascii/class/render.rs
assertion_line: 591
expression: "render_a(\"classDiagram\\nclass A\\nclass B\\nA --> B\")"
---



      +---+      +---+
      | A |-----<| B |
      +---+      +---+
