src/mermaid/ascii/class/snapshots/veol__mermaid__ascii__class__render__tests__render_class_generic.snap
---
source: src/mermaid/ascii/class/render.rs
assertion_line: 524
expression: "render_s(\"classDiagram\\nclass List~T~\")"
---



      ┌─────────┐
      │ List<T> │
      └─────────┘
