src/mermaid/ascii/class/snapshots/veol__mermaid__ascii__class__render__tests__render_class_with_annotation_interface.snap
---
source: src/mermaid/ascii/class/render.rs
assertion_line: 517
expression: "render_s(\"classDiagram\\nclass Foo {\\n  <<interface>>\\n  +do()\\n}\")"
---



      ┌───────────────┐
      │ <<interface>> │
      │      Foo      │
      ├───────────────┤
      │ +do()         │
      └───────────────┘
