src/mermaid/ascii/class/snapshots/veol__mermaid__ascii__class__render__tests__render_class_with_attributes.snap
---
source: src/mermaid/ascii/class/render.rs
assertion_line: 489
expression: "render_s(\"classDiagram\\nclass Foo {\\n  +String name\\n  -int age\\n}\")"
---



      ┌──────────────┐
      │     Foo      │
      ├──────────────┤
      │ +String name │
      │ -int age     │
      └──────────────┘
