src/mermaid/ascii/class/snapshots/veol__mermaid__ascii__class__render__tests__render_class_with_attributes_and_methods.snap
---
source: src/mermaid/ascii/class/render.rs
assertion_line: 503
expression: "render_s(\"classDiagram\\nclass Foo {\\n  +String name\\n  +greet()\\n}\")"
---



      ┌──────────────┐
      │     Foo      │
      ├──────────────┤
      │ +String name │
      ├──────────────┤
      │ +greet()     │
      └──────────────┘
