src/mermaid/ascii/class/snapshots/veol__mermaid__ascii__class__render__tests__render_class_with_methods.snap
---
source: src/mermaid/ascii/class/render.rs
assertion_line: 496
expression: "render_s(\"classDiagram\\nclass Foo {\\n  +greet()\\n  +shout() String\\n}\")"
---



      ┌──────────────────┐
      │       Foo        │
      ├──────────────────┤
      │ +greet()         │
      │ +shout(): String │
      └──────────────────┘
