src/mermaid/ascii/class/snapshots/veol__mermaid__ascii__class__render__tests__render_class_with_visibility_markers.snap
---
source: src/mermaid/ascii/class/render.rs
assertion_line: 510
expression: "render_s(\"classDiagram\\nclass Foo {\\n  +pub\\n  -priv\\n  #prot\\n  ~pkg\\n}\")"
---



      ┌───────┐
      │  Foo  │
      ├───────┤
      │ +pub  │
      │ -priv │
      │ #prot │
      │ ~pkg  │
      └───────┘
