src/mermaid/ascii/class/snapshots/veol__mermaid__ascii__class__render__tests__render_dependency_dotted_arrow.snap
---
source: src/mermaid/ascii/class/render.rs
assertion_line: 562
expression: "render_s(\"classDiagram\\nclass A\\nclass B\\nA ..> B\")"
---



      ┌───┐      ┌───┐
      │ A │┈┈┈┈┈◁│ B │
      └───┘      └───┘
