src/mermaid/ascii/class/snapshots/veol__mermaid__ascii__class__render__tests__render_long_class_name_widens_box.snap
---
source: src/mermaid/ascii/class/render.rs
assertion_line: 586
expression: "render_s(\"classDiagram\\nclass AVeryLongClassName\")"
---



      ┌────────────────────┐
      │ AVeryLongClassName │
      └────────────────────┘
