src/mermaid/ascii/class/snapshots/veol__mermaid__ascii__class__render__tests__render_realization_dotted_inheritance.snap
---
source: src/mermaid/ascii/class/render.rs
assertion_line: 567
expression: "render_s(\"classDiagram\\nclass I\\nclass C\\nI <|.. C\")"
---



      ┌───┐      ┌───┐
      │ I │◁┈┈┈┈┈│ C │
      └───┘      └───┘
