src/mermaid/ascii/class/snapshots/veol__mermaid__ascii__class__render__tests__render_single_empty_class.snap
---
source: src/mermaid/ascii/class/render.rs
assertion_line: 484
expression: "render_s(\"classDiagram\\nclass Foo\")"
---



      ┌─────┐
      │ Foo │
      └─────┘
